--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ nav {
 nav ul {
   list-style: none;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   gap: 20px;
   margin: 0;
   padding: 0;
