--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ section:nth-child(even) {
 }
 
 #our-story {
-  background-color: #decffe; /* pastel blue */
+  background-color: #DECFFE; /* pale lavender */
 }
 
 #gallery {
