--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ section:nth-child(even) {
 }
 
 #gallery {
-  background-color: #fff8e7; /* pastel peach */
+  background-color: #F3E2FF; /* lavender */
 }
 
 #milestones {
